# remote-scan

./: .gitignore  CMakeLists.txt  Dependencies.cmake  Dockerfile  README.md  generate-cmake.bat  premake5.lua
config/: config.conf
src/: file-monitor.cpp  file-monitor.h  main.cpp  monitor.cpp  monitor.h  notify.cpp  notify.h  remote-scan.cpp  remote-scan.h  scan.cpp  scan.h  types.h  update-listener.cpp  update-listener.h  version.h
src/api/: api-base.cpp  api-base.h  api-emby.cpp  api-emby.h  api-manager.cpp  api-manager.h  api-plex.cpp  api-plex.h
src/config-reader/: config-reader-types.h  config-reader.cpp  config-reader.h
src/logger/: ansii-formatter.cpp  ansii-formatter.h  ansii-remove-formatter.cpp  ansii-remove-formatter.h  log-apprise.cpp  log-apprise.h  log-utils.h  logger-types.h  logger.cpp  logger.h
